Closed
Bug 1553400
Opened 6 years ago
Closed 6 years ago
XMLHttpRequestDoneNotifier should own XHR, not vice-versa
Categories
(Core :: DOM: Networking, defect, P1)
Core
DOM: Networking
Tracking
()
RESOLVED
FIXED
mozilla69
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | fixed |
| firefox69 | --- | fixed |
People
(Reporter: smaug, Assigned: smaug)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [necko-triaged])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
If GC/CC run, what keeps XHR alive long enough.
oops, my bad. Patch coming later today. Trivial fix, safe for beta.
| Assignee | ||
Updated•6 years ago
|
Priority: -- → P1
Updated•6 years ago
|
Whiteboard: [necko-triaged]
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Comment 2•6 years ago
|
||
I tried to write a testcase for this, but failed.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
Comment on attachment 9066708 [details]
Bug 1553400 - XMLHttpRequestDoneNotifier should own XHR, not vice-versa, r=baku
Beta/Release Uplift Approval Request
- User impact if declined: In theory load event for XMLHttpRequest might not fire. (But I haven't managed to write a testcase)
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Right now XHR owns XMLHttpRequestDoneNotifier, the patch makes XMLHttpRequestDoneNotifier to own XHR.
Explicit raw pointer clearance is still there. - String changes made/needed: NA
Attachment #9066708 -
Flags: approval-mozilla-beta?
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/688e84498d38
XMLHttpRequestDoneNotifier should own XHR, not vice-versa, r=baku
Updated•6 years ago
|
Has Regression Range: --- → yes
status-firefox67:
--- → unaffected
status-firefox68:
--- → affected
status-firefox69:
--- → affected
status-firefox-esr60:
--- → unaffected
Keywords: regression
Comment 6•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Comment 7•6 years ago
|
||
Comment on attachment 9066708 [details]
Bug 1553400 - XMLHttpRequestDoneNotifier should own XHR, not vice-versa, r=baku
approved for 68.0b5
Attachment #9066708 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•6 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•