Bug 1553400 - XMLHttpRequestDoneNotifier should own XHR, not vice-versa. r=baku a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D32142